--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ theme: jekyll-theme-minimal
 title: Titolo sito
 description: [Electronic Engineer]
 
-logo: Img/logo.png
+logo: Img/pic.png
 show_downloads: false
 google_analytics: none
